--- a/book/book.tex
+++ b/book/book.tex
@@ -13,7 +13,7 @@
 \newcommand{\thetitle}{Modeling and Simulation in Python}
 \newcommand{\thesubtitle}{}
 \newcommand{\theauthors}{Allen B. Downey}
-\newcommand{\theversion}{2.4.0}
+\newcommand{\theversion}{3.0.0}
 
 
 %%%% Both LATEX and PLASTEX
@@ -37,7 +37,7 @@
 \newtcblisting{python}{
   skin=standard,
   boxrule=0.4pt,
-  colback=light-gray,
+  %colback=light-gray,
   listing only,
   top=0pt,
   bottom=0pt,
@@ -4486,15 +4486,17 @@ To understand how coffee cools (and milk warms), we need a model of temperature 
 
 \index{temperature}
 
-When particles in a hot object contact particles in a cold object, the hot object gets cooler and the cold object gets warmer as energy is transferred from one to the other.  The transferred energy is called {\bf heat}; in SI units it is measured in joules (\si{\joule}).
+When particles in a hot object contact particles in a cold object, the hot object gets cooler and the cold object gets warmer as energy is transferred from one to the other.  
+The transferred energy is called {\bf heat}; in SI units it is measured in joules (\si{\joule}).
 
 \index{heat}
 
 Heat is related to temperature by the following equation (see \url{http://modsimpy.com/thermass}):
 %
-\[ Q = C \Delta T \]
+\[ Q = C~\Delta T \]
 %
-where $Q$ is the amount of heat transferred to an object, $\Delta T$ is resulting change in temperature, and $C$ is the {\bf thermal mass} of the object, which quantifies how much energy it takes to heat or cool it.  In SI units, thermal mass is measured in joules per degree Celsius (\si{\joule\per\celsius}).
+where $Q$ is the amount of heat transferred to an object, $\Delta T$ is resulting change in temperature, and $C$ is the {\bf thermal mass} of the object, which quantifies how much energy it takes to heat or cool it.  
+In SI units, thermal mass is measured in joules per degree Celsius (\si{\joule\per\celsius}).
 
 \index{thermal mass}
 
@@ -4517,7 +4519,7 @@ To give you a sense of how much energy that is, if you were able to harness all 
 \index{Mount Everest}
 
 Assuming that the cup has less mass than the coffee, and is made from a material with lower specific heat, we can ignore the thermal mass of the cup.
-For a cup with substantial thermal mass, we might consider a model that computes the temperature of coffee and cup separately.
+For a cup with substantial thermal mass, like a ceramic mug, we might consider a model that computes the temperature of coffee and cup separately.
 
 
 \section{Heat transfer}
@@ -4541,8 +4543,7 @@ In a situation like the coffee cooling problem, there are three ways heat transf
 
 \end{itemize}
 
-For objects like coffee in a car, the effect of radiation is much smaller than 
-the effects of conduction and convection, so we will ignore it.
+For objects like coffee in a car, the effect of radiation is much smaller than the effects of conduction and convection, so we will ignore it.
 
 Convection can be a complex topic, since it often depends on details of fluid flow in three dimensions.  But for this problem we will be able to get away with a simple model called ``Newton's law of cooling".
 
@@ -4556,11 +4557,11 @@ Newton's law of cooling asserts that the temperature rate of change for an objec
 %
 where $T$, the temperature of the object, is a function of time, $t$; $T_{env}$ is the temperature of the environment, and $r$ is a constant that characterizes how quickly heat is transferred between the system and the environment.
 
-Newton's so-called ``law" is really a model in the sense that it is approximately true in some conditions, only roughly true in others, and not at all true in others.
+Newton's so-called ``law" is really a model: it is a good approximation in some conditions and less good in others.
 
 For example, if the primary mechanism of heat transfer is conduction, Newton's law is ``true", which is to say that $r$ is constant over a wide range of temperatures.  And sometimes we can estimate $r$ based on the material properties and shape of the object.
 
-When convection contributes a non-negligible fraction of heat transfer, $r$  depends on temperature, but Newton's law is often accurate enough, at least over a narrow range of temperatures.  In this case $r$ usually has to be estimated experimentally, since it depends on details of surface shape, air flow, evaporation, etc.
+When convection contributes a non-negligible fraction of heat transfer, $r$ depends on temperature, but Newton's law is often accurate enough, at least over a narrow range of temperatures.  In this case $r$ usually has to be estimated experimentally, since it depends on details of surface shape, air flow, evaporation, etc.
 
 When radiation makes up a substantial part of heat transfer, Newton's law is not a good model at all.  This is the case for objects in space or in a vacuum, and for objects at high temperatures (more than a few hundred degrees Celsius, say).
 
@@ -4588,7 +4589,7 @@ coffee = System(init=init,
                 volume=300,
                 r=0.01,
                 T_env=22,
-                t_0=0, 
+                t_0=0,
                 t_end=30,
                 dt=1)
 \end{python}
@@ -4608,15 +4609,13 @@ Note: I use $\Delta T$ to denote a change in temperature over time, but in the c
 
 Now we can write an update function:
 
-\index{unpack}
-
 \begin{python}
 def update_func(state, t, system):
-    unpack(system)
+    r, T_env, dt = system.r, system.T_env, system.dt
     
     T = state.T
     T += -r * (T - T_env) * dt
-
+    
     return State(T=T)
 \end{python}
 
@@ -4634,11 +4633,11 @@ Here's a version of \py{run_simulation} that simulates a series of time steps fr
 
 \index{time step}
 \index{\py{run_simulation}}
-\index{unpack}
 
 \begin{python}
 def run_simulation(system, update_func):
-    unpack(system)
+    init = system.init
+    t_0, t_end, dt = system.t_0, system.t_end, system.dt
     
     frame = TimeFrame(columns=init.index)
     frame.row[t_0] = init
@@ -4646,9 +4645,6 @@ def run_simulation(system, update_func):
     
     for t in ts:
         frame.row[t+dt] = update_func(frame.row[t], t, system)
-        
-    # store the final temperature in T_final
-    system.T_final = get_last_value(frame.T)
     
     return frame
 \end{python}
@@ -4656,7 +4652,6 @@ def run_simulation(system, update_func):
 This function is similar to previous versions of \py{run_simulation}.
 
 One difference is that it uses \py{linrange} to make an array of values from \py{t_0} to \py{t_end} with time step \py{dt}.  The result does not include \py{t_end}, so the last value in the array is \py{t_end-dt}.
-Also, it stores the final temperature as a system variable, \py{T_final}.
 
 \index{linrange}
 \index{NumPy}
@@ -4676,17 +4671,17 @@ The result is a \py{TimeFrame} object with one row per time step and just one co
 First I want to wrap what we have so far in a function:
 
 \begin{python}
-def make_system(T_init=90, r=0.01, volume=300, t_end=30):
+def make_system(T_init, r, volume, t_end):
     init = State(T=T_init)
-    
+                   
     return System(init=init,
-                  T_final=T_init,
+                  r=r, 
                   volume=volume,
-                  r=r,
-                  T_env=22, 
-                  t_0=0,
-                  t_end=t_end,
-                  dt=1)
+                  temp=T_init,
+                  t_0=0, 
+                  t_end=t_end, 
+                  dt=1,
+                  T_env=22)
 \end{python}
 
 \py{make_system} takes the system parameters and packs them into a \py{System} object.  Now we can simulate the system like this:
@@ -4709,33 +4704,33 @@ In the previous chapter we wrote a simulation of a cooling cup of coffee.  Given
 
 In general, we don't know the value of \py{r}, but we can use measurements to estimate it.  Given an initial temperature, a final temperature, and the time in between, we can find \py{r} by trial and error.
 
-In this chapter, we'll see a better way to find \py{r}, using a SciPy function called \py{root_scalar}.
+In this chapter, we'll see a better way to find \py{r}, using a {\bf bisection search}.
 
-And the we'll get back to solving the coffee cooling problem.
+And then we'll get back to solving the coffee cooling problem.
 
 \section{Finding roots}
-\label{root_scalar}
+\label{root_bisect}
 
-SciPy provides a method called \py{root_scalar} that finds the roots of non-linear equations.  As a simple example, suppose you want to find the roots of the polynomial
+The ModSim library provides a method called \py{root_bisect} that finds the roots of non-linear equations.  As a simple example, suppose you want to find the roots of the polynomial
 %
 \[ f(x) = (x - 1)(x - 2)(x - 3) \]
 %
 where {\bf root} means a value of $x$ that makes $f(x)=0$.  Because of the way I wrote the polynomial, we can see that if $x=1$, the first factor is 0; if $x=2$, the second factor is 0; and if $x=3$, the third factor is 0, so those are the roots.
 
-\index{\py{root_scalar}}
+\index{\py{root_bisect}}
 \index{root}
 
-But usually it's not that easy.  In that case \py{root_scalar} can help.  First, we have to write a function that evaluates $f$:
+I'll use this example to demonstrate \py{root_bisect}.  First, we have to write a function that evaluates $f$:
 
 \begin{python}
 def func(x):
     return (x-1) * (x-2) * (x-3)
 \end{python}
 
-Now we call \py{root_scalar} like this:
+Now we call \py{root_bisect} like this:
 
 \begin{python}
-res = root_scalar(func, [1.5, 2.5])
+res = root_bisect(func, [1.5, 2.5])
 print(res.root)
 \end{python}
 
@@ -4743,15 +4738,16 @@ The first argument is the function whose roots we want.
 The second argument is an interval that contains a root.  
 The result is an object that contains several variables, including \py{root}, which stores the root that was found.
 
-So how can we use \py{root_scalar} to estimate \py{r}?  
+So how can we use \py{root_bisect} to estimate \py{r}?  
 
-What we want is the value of \py{r} that yields a final temperature of \SI{70}{\celsius}.  To work with \py{root_scalar}, we need a function that takes \py{r} as a parameter and returns the difference between the final temperature and the goal:
+What we want is the value of \py{r} that yields a final temperature of \SI{70}{\celsius}.  To work with \py{root_bisect}, we need a function that takes \py{r} as a parameter and returns the difference between the final temperature and the goal:
 
 \begin{python}
 def error_func1(r):
-    system = make_system(r=r)
-    results = run_simulation(system, update)
-    return system.T_final - 70
+    system = make_system(T_init=90, r=r, volume=300, t_end=30)
+    results = run_simulation(system, update_func)
+    T_final = get_last_value(results.T)
+    return T_final - 70
 \end{python}
 
 I call a function like this an ``error function" because it returns the difference between what we got and what we wanted, that is, the error.  When we find the right value of \py{r}, this error will be 0.
@@ -4770,10 +4766,10 @@ The result is an error of \SI{2.3}{\celsius}, because the final temperature with
 With \py{r=0.02}, the error is \SI{-10.9}{\celsius}, which means that the final temperature is too low.  
 So we know that the correct value must be in between.
 
-Now we can call \py{root_scalar} like this:
+Now we can call \py{root_bisect} like this:
 
 \begin{python}
-res = root_scalar(error_func1, [0.01, 0.02])
+res = root_bisect(error_func1, [0.01, 0.02])
 r_coffee = res.root
 \end{python}
 
@@ -4814,14 +4810,14 @@ For the coffee cooling problem, we have the volume of each liquid; if we also kn
 %
 \[ C = \rho V c_p \]
 %
-If the densities of the liquids are equal, they drop out of the equation, and we can write:
+If the liquids have the same density and heat capacity, they drop out of the equation, and we can write:
 %
 \[ T = \frac{V_1 T_1 + V_2 T_2}{V_1 + V_2} \]
 %
 where $V_1$ and $V_2$ are the volumes of the liquids.  
 
-For this problem, we'll assume that milk and coffee have the same density and the same specific heat.
-As an exercise, you can look up these quantities to see how good the approximation is.
+As an approximation, I'll assume that milk and coffee have the same density and specific heat.
+As an exercise, you can look up these quantities and see how good this assumption is.
 
 \index{volume}
 \index{density}
@@ -4830,20 +4826,19 @@ As an exercise, you can look up these quantities to see how good the approximati
 The following function takes two \py{System} objects that represent the coffee and milk, and creates a new \py{System} to represent the mixture:
 
 \begin{python}
-def mix(s1, s2):
-    assert s1.t_end == s2.t_end
+def mix(system1, system2):
+    assert system1.t_end == system2.t_end
     
-    V_mix = s1.volume + s2.volume
+    V1, V2 = system1.volume, system2.volume
+    T1, T2 = system1.temp, system2.temp
     
-    T_mix = (s1.volume * s1.T_final + 
-             s2.volume * s2.T_final) / V_mix
+    V_mix = V1 + V2
+    T_mix = (V1 * T1 + V2 * T2) / V_mix
     
-    mixture = make_system(T_init=T_mix,
-                          t_end=0,
-                          r=s1.r,
-                          volume=V_mix)
-    
-    return mixture
+    return make_system(T_init=T_mix,
+                       r=system1.r,
+                       volume=V_mix,
+                       t_end=30)
 \end{python}
 
 The first line is an \py{assert} statement, which is a way of checking for errors.  It compares \py{t_end} for the two systems to confirm that they have been cooling for the same time.  If not, \py{assert} displays an error message and stops the program.
@@ -4851,73 +4846,73 @@ The first line is an \py{assert} statement, which is a way of checking for error
 \index{assert statement}
 \index{statement!assert}
 
-The next two statements compute the total volume of the mixture and its temperature.  Finally, \py{mix} makes a new \py{System} object and returns it.
+The next two lines extract volume and temperature from the two \py{System} objects.  Then the following two lines compute the volume and temperature of the mixture.  Finally, \py{mix} makes a new \py{System} object and returns it.
 
-This function uses the value of \py{r} from \py{s1} as the value of \py{r} for the mixture.  If \py{s1} represents the coffee, and we are adding the milk to the coffee, this is probably a reasonable choice.  On the other hand, when we increase the amount of liquid in the coffee cup, that might change \py{r}.  So this is an assumption we might want to revisit.
+This function uses the value of \py{r} from \py{system1} as the value of \py{r} for the mixture.  If \py{system1} represents the coffee, and we are adding the milk to the coffee, this is probably a reasonable choice.  On the other hand, when we increase the amount of liquid in the coffee cup, that might change \py{r}.  So this is an assumption we might want to revisit.
 
+Notice that \py{mix} requires the \py{System} objects to have a variable named \py{temp}.
+To make sure this variable gets updated when we run a simulation, I use this function:
+
+\begin{python}
+def run_and_set(system):
+    results = run_simulation(system, update_func)
+    system.temp = get_last_value(results.T)
+    return results
+\end{python}
+
+Now we have everything we need to solve the problem.
 
 \section{Mix first or last?}
 
-Now we have everything we need to solve the problem.  First I'll create objects to represent the coffee and cream, and run for 30 minutes.
-
-\begin{python}
-coffee = make_system(T_init=90, t_end=30, 
-                     r=r_coffee, volume=300)
-coffee_results = run_simulation(coffee, update_func)
-
-milk = make_system(T_init=5, t_end=30, 
-                   r=r_milk, volume=50)
-milk_results = run_simulation(milk, update_func)
-\end{python}
-
-The final temperatures, before mixing, are \SI{70}{\celsius} and \SI{21.8}{\celsius}.  Then I'll mix them:
-
-\begin{python}
-mix_last = mix(coffee, milk)
-\end{python}
-
-After mixing, the temperature is \SI{63.1}{\celsius}, which is still warm enough to be enjoyable.  Would we do any better if we added the milk first?
-
-To find out, I'll create new objects for the coffee and milk:
+First I'll create objects to represent the coffee and cream:
 
 \begin{python}
 coffee = make_system(T_init=90, r=r_coffee, 
                      volume=300, t_end=30)
-milk = make_system(T_init=5, r=r_milk, 
-                   volume=50, t_end=30)
+
+milk = make_system(T_init=5, r=r_milk, volume=50, t_end=30)
 \end{python}
 
-Then mix them and simulate 30 minutes:
+Then I'll mix them and simulate 30 minutes:
 
 \begin{python}
 mix_first = mix(coffee, milk)
-results = run_simulation(mix_first, update_func)
+mix_results = run_and_set(mix_first)
 \end{python}
 
-The final temperature is only \SI{61.4}{\celsius}.  So it looks like adding the milk at the end is better, by about \SI{1.7}{\celsius}.  But is that the best we can do?
+The final temperature is \SI{61.4}{\celsius} which is still warm enough to be enjoyable.  Would we do any better if we added the milk last?
 
+I'll simulate the coffee and milk separately, and then mix them:
+
+\begin{python}
+coffee_results = run_and_set(coffee)
+milk_results = run_and_set(milk)
+mix_last = mix(coffee, milk)
+\end{python}
+
+After mixing, the temperature is \SI{63.1}{\celsius}.  So it looks like adding the milk at the end is better by about \SI{1.7}{\celsius}.  But is that the best we can do?
 
 \section{Optimization}
 
-Adding the milk after 30 minutes is better than adding immediately, but maybe there's something in between that's even better.  To find out, I'll use the following function, which takes \py{t_add} as a parameter:
+Adding the milk after 30 minutes is better than adding immediately, but maybe there's something in between that's even better.  To find out, I'll use the following function, which takes the time to add the milk, \py{t_add}, as a parameter:
 
 \index{optimization}
 
 \begin{python}
-def run_and_mix(t_add, t_total=30):
-    coffee = make_system(T_init=90, t_end=t_add, 
-                         r=r_coffee, volume=300)
-    coffee_results = run_simulation(coffee, update_func)
-
-    milk = make_system(T_init=5, t_end=t_add, 
-                       r=r_milk, volume=50)
-    milk_results = run_simulation(milk, update_func)
+def run_and_mix(t_add, t_total):
+    coffee = make_system(T_init=90, r=r_coffee, 
+                         volume=300, t_end=t_add)
+    coffee_results = run_and_set(coffee)
+    
+    milk = make_system(T_init=5, r=r_milk, 
+                       volume=50, t_end=t_add)
+    milk_results = run_and_set(milk)
     
     mixture = mix(coffee, milk)
     mixture.t_end = t_total - t_add
-    results = run_simulation(mixture, update_func)
+    results = run_and_set(mixture)
 
-    return mixture.T_final
+    return mixture.temp
 \end{python}
 
 When \py{t_add=0}, we add the milk immediately; when \py{t_add=30}, we add it at the end.  Now we can sweep the range of values in between:
@@ -4972,17 +4967,14 @@ We can use the following function to compute the time series:
 
 \begin{python}
 def run_analysis(system):
-    unpack(system)
+    T_env, r = system.T_env, system.r
     
-    T_init = init.T    
-    ts = linrange(t_0, t_end, dt, endpoint=True)
+    T_init = system.init.T    
+    ts = linspace(0, system.t_end)
     
     T_array = T_env + (T_init - T_env) * exp(-r * ts)
     
-    results = TimeFrame(T_array, index=ts, columns=['T'])
-    system.T_final = get_last_value(results.T)
-
-    return results
+    return TimeFrame(T_array, index=ts, columns=['T'])
 \end{python}
 
 This function is similar to \py{run_simulation}; it takes a \py{System} as a parameter and returns a \py{TimeFrame} as a result.
@@ -5630,9 +5622,9 @@ def run_simulation(system, update_func):
     return frame
 \end{python}
 
-In Chapter~\ref{chap16} we used \py{root_scalar} to find the value of a parameter that yields a particular result.  We defined an error function:
+In Chapter~\ref{chap16} we used \py{root_bisect} to find the value of a parameter that yields a particular result.  We defined an error function:
 
-\index{\py{root_scalar}}
+\index{\py{root_bisect}}
 
 \begin{python}
 def error_func1(r):
@@ -5641,10 +5633,10 @@ def error_func1(r):
     return system.T_final - 70
 \end{python}
 
-And passed it to \py{root_scalar} with an initial interval, like this:
+And passed it to \py{root_bisect} with an initial interval, like this:
 
 \begin{python}
-res = root_scalar(error_func1, [0.01, 0.02])
+res = root_bisect(error_func1, [0.01, 0.02])
 r_coffee = res.root
 \end{python}
 
@@ -5711,12 +5703,12 @@ best_params, details = fit_leastsq(error_func, params, data)
 
 \py{unpack} is a function in the \py{modsim} library that copies the variables and values from a \py{System} object into a special Python data structure that stores global variables.  To be honest, it is a bit of a hack; that is, it may be expedient, but it might not be an example of software engineering you should emulate.
 
-% TODO: Add the pointer to root_scalar
+% TODO: Add the pointer to root_bisect
 
-\py{root_scalar} is based on a Scipy function that is also called \py{root_scalar}; you can read more about it at \url{http://modsimpy.com/root_scalar}.
+\py{root_bisect} is based on a Scipy function that is also called \py{root_bisect}; you can read more about it at \url{http://modsimpy.com/root_bisect}.
 It uses a numerical method called Powell's method, and you can read more about that at \url{http://modsimpy.com/powell}.
 
-\index{\py{root_scalar}}
+\index{\py{root_bisect}}
 
 \py{run_ode_solver} uses the SciPy function \py{solve_ivp}, which you can read about at \url{http://modsimpy.com/ivp}.
 By default it uses an algorithm called RK45, or RKF45, which you can read about at \url{http://modsimpy.com/runge}).
@@ -6405,7 +6397,7 @@ The mass, diameter, and drag coefficient of the baseball are from the sources in
 
 \index{density}
 
-The following function uses the \py{Params} object to make a \py{System} object.  This two-step process makes the code more readable and makes it easier to work with functions like \py{root_scalar}.
+The following function uses the \py{Params} object to make a \py{System} object.  This two-step process makes the code more readable and makes it easier to work with functions like \py{root_bisect}.
 
 \index{System object}
 \index{\py{make_system}}
@@ -6729,9 +6721,9 @@ In the notebook for this chapter, \py{chap22.ipynb}, you'll have to chance to fi
 
 \item Once you can find the optimal angle for any velocity, you have to find the minimum velocity that gets the ball over the wall.  You'll write a function that takes a velocity as a parameter, computes the optimal angle for that velocity, and returns the height of the ball, at the wall, using the optimal angle.
 
-\item Finally, you'll use \py{root_scalar} to find the velocity that makes the optimal height at the wall just barely 37 feet.
+\item Finally, you'll use \py{root_bisect} to find the velocity that makes the optimal height at the wall just barely 37 feet.
   
-\index{\py{root_scalar}}
+\index{\py{root_bisect}}
 
 \end{itemize}
 
@@ -7321,9 +7313,9 @@ def run_two_phases(force, torque_friction, params):
     return results
 \end{python}
 
-Now we can use \py{run_two_phases} to write an error function we can use, with \py{root_scalar}, to find the torque due to friction that yields the observed results from the first push, a total rotation of \SI{1.5}{\radian}.
+Now we can use \py{run_two_phases} to write an error function we can use, with \py{root_bisect}, to find the torque due to friction that yields the observed results from the first push, a total rotation of \SI{1.5}{\radian}.
 
-\index{\py{root_scalar}}
+\index{\py{root_bisect}}
 \index{error function}
 
 \begin{python}
@@ -7335,14 +7327,14 @@ def error_func1(torque_friction, params):
     return theta_final - 1.5
 \end{python}
 
-Now we can use \py{root_scalar} to estimate torque due to friction.
+Now we can use \py{root_bisect} to estimate torque due to friction.
 
 \index{torque}
 \index{friction}
-\index{\py{root_scalar}}
+\index{\py{root_bisect}}
 
 \begin{python}
-res = root_scalar(error_func1, [0.5, 2], params)
+res = root_bisect(error_func1, [0.5, 2], params)
 force = res.root
 \end{python}
 
